[58477] chore: code review